--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,22 @@
-spring.datasource.url=jdbc:h2:mem:DBNAME
-spring.datasource.username=root
-spring.datasource.password=SA
-spring.datasource.driverClassName=org.h2.Driver
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.initialize=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
-server.port = 8090
+# Data Base Config
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.hibernate.ddl-auto=update
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+# Data Base crendentials
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST:127.0.0.1}:${DB_PORT:5434}/${DB_NAME:proyectos_db}
+spring.datasource.username=${DB_USER:username}
+spring.datasource.password=${DB_PASS:password}
+
+# Debug
+
+# Show sql in console:
+spring.jpa.show-sql=false
