--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	compile group: 'com.h2database', name: 'h2', version: '1.4.200'
 	//compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
 
+	compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1200-jdbc41'
+
 	testImplementation("info.cukes:cucumber-java:1.2.5")
 	testImplementation("info.cukes:cucumber-junit:1.2.5")
 	testImplementation("info.cukes:cucumber-spring:1.2.5")
@@ -33,6 +35,7 @@ dependencies {
 	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.1")
 
 }
+
 tasks.withType(Test){
 	scanForTestClasses = false
 	include "**/*Test.class"
