sacamos version postgresql

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	compile group: 'com.h2database', name: 'h2', version: '1.4.200'
 	//compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
 
-	compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1200-jdbc41'
+	compile group: 'org.postgresql', name: 'postgresql'
 
 	testImplementation("info.cukes:cucumber-java:1.2.5")
 	testImplementation("info.cukes:cucumber-junit:1.2.5")
